This this the changelog file for the Pothos C++ library.

Release 0.1.1 (pending)
==========================

- Pothos build utils set library paths in unix environment
- Added serialization for built-in proxy container types
- Fixed circular buffer push front condition when non-empty
- Fixed Topology::waitInactive() false positive condition
- Fixed usage of managed buffers for message back-pressure

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos C++ library.